<resources>
    <string name="app_name">Autos</string>
    <string name="tv_correo">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo_registro">Error al hacer el registro</string>
    <string name="msg_fallo_login">Error autenticando</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_auto">Autos</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="msg_marca">Marca del auto</string>
    <string name="msg_modelo">Modelo</string>
    <string name="msg_color">Color</string>
    <string name="msg_anualidad">Año</string>
    <string name="msg_placa">Placa</string>
    <string name="msg_pais">País de origen</string>
    <string name="msg_plazas">Cantidad de plazas</string>
    <string name="msg_cilindraje">Cilindraje</string>
    <string name="bt_agregar">Agregar</string>
    <string name="autoAdded">Auto agregado</string>
    <string name="noData">Faltan datos</string>
</resources>