<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auto.AddAutoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">
        <EditText
            android:id="@+id/etMarca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/msg_marca"
            android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/etModelo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_modelo"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/etColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_color"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/etAnualidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_anualidad"
                android:inputType="number" />
            <EditText
                android:id="@+id/etPlaca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_placa"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/etPais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_pais"
                android:inputType="textPersonName"/>
            <EditText
                android:id="@+id/etPlazas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_plazas"
                android:inputType="number" />
            <EditText
                android:id="@+id/etCilindraje"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/msg_cilindraje"
                android:inputType="number" />

            <Button
                android:id="@+id/bt_agregar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bt_agregar" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>